--- a/www/css/gui.css
+++ b/www/css/gui.css
@@ -18,7 +18,7 @@ div#dice0 {
  width: 120px;
  height: 120px;
  margin-left: 30px;
- margin-right: 30px;
+ margin-right: 0px;
  background: url("../img/prettydice.png");
  user-select: none;
 -webkit-user-select: none;
@@ -30,6 +30,7 @@ div#dice1 {
  float: left;
  width: 120px;
  height: 120px;
+ margin-left: 30px;
  margin-right: 30px;
  background: url("../img/prettydice.png");
  user-select: none;
