--- a/www/css/gui.css
+++ b/www/css/gui.css
@@ -1,25 +1,47 @@
+html {
+ font-family: "Arial", "sans-serif";
+}
+
 body {
-   background: url("../img/carbonbg.png");
-   background-attachment:fixed;
-   color: white;
-   position: relative;
+ background: url("../img/metalbg.png");
+ background-attachment:fixed;
+ background-size:100% 100%;
+ color: white;
+ position: relative;
+ overflow: hidden;
 }
   
 h1 {
  text-align: center;
+ font-family: "Georgia", "Times New Roman", Times, serif;
+ font-size: 500%;
+ margin-bottom: 0px;
+ margin-top: 40px;
+}
+
+h2 {
+ text-align: center;
+ font-family: "Georgia", "Times New Roman", Times, serif;
+ font-size: 105%;
+ margin-top: 0px;
+ margin-bottom: 50px;
 }
 
 div#dicewrap {
- height: 120px;
+ /*height: 120px;*/
+ overflow: auto;
+ padding-top: 30px;
+ margin-bottom: 30px;
 }
 
 div#dice0 {
  float: left;
- width: 120px;
- height: 120px;
- margin-left: 30px;
+ width: 200px;
+ height: 200px;
+ margin-left: 50px;
  margin-right: 0px;
  background: url("../img/prettydice.png");
+ background-size: 600px;
  user-select: none;
 -webkit-user-select: none;
 -moz-user-select: none;
@@ -28,25 +50,26 @@ div#dice0 {
 
 div#dice1 {
  float: left;
- width: 120px;
- height: 120px;
- margin-left: 30px;
+ width: 200px;
+ height: 200px;
+ margin-left: 50px;
  margin-right: 30px;
  background: url("../img/prettydice.png");
+ background-size: 600px;
  user-select: none;
 -webkit-user-select: none;
 -moz-user-select: none;
 }
 
 div#total {
- margin-left: 30px;
+ margin-left: 50px;
  margin-top: 15px;
  font-weight: bold;
  font-size: large;
 }
 
 div#nextturn {
- margin-left: 30px;
+ margin-left: 50px;
  padding-left: 10px;
  background-color: #EEE;
  color: black;
@@ -55,17 +78,39 @@ div#nextturn {
 }
 
 div#opennew {
- margin-left: 30px;
- padding-left: 10px;
- background-color: white;
+ position: relative;
+ margin-left: 80px;
  color: black;
+ font-size: 20px;
+ font-weight: bold;
+ width: 140px;
+ margin-bottom: 30px;
+ 
+-webkit-border-radius: 7;
+-moz-border-radius: 7;
+ border-radius: 7px;
+ border: none;
+ padding: 10px 10px 10px 20px;
+ text-decoration: none; 
+ }
+ 
+ div#opennew:hover {
+ position: relative;
+ margin-left: 80px;
+ color: white;
+ background-color: black;
  font-size: 20px;
  width: 140px;
  margin-bottom: 30px;
- border: 3px solid red;
+ 
+-webkit-border-radius: 7;
+-moz-border-radius: 7;
+ border-radius: 7px;
+ border: none;
+ padding: 10px 10px 10px 20px;
+ text-decoration: none; 
  }
-
-
+ 
 #tail {
  border: 3px solid blue;
  height: 15px;
@@ -83,22 +128,33 @@ div#opennew {
 #leftcol {
   float: left;
   width: 45%;
+  /*margin-top: 3%;*/
 }
 #rightcol {
-  float: left;
-  width: 45%;
+  float: right;
+  width: 42%;
+  margin-top: 5%;
+  margin-right: 4%;
+  border-radius: 25px;
+  background: #ffffff;
+  padding: 20px; 
+ -moz-box-shadow:    inset 0 0 10px #000000;
+ -webkit-box-shadow: inset 0 0 10px #000000;
+  box-shadow:        inset 0 0 10px #000000;
 }
 
  /* The New Game window */
 .newgame {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    background: none; /*url("../img/metalbg.png");*/
+	background-size: 100% 100%;
+	position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    overflow: hidden; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     color: black;
@@ -109,6 +165,37 @@ div#opennew {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    border: 2px solid #000;
+	border-radius: 10px;
+	overflow: auto;
+    width: 60%; /* Could be more or less, depending on screen size */
+}
+
+#left-start-col {
+  float: left;
+  width: 45%;
+}
+
+#right-start-col {
+  float: right;
+  width: 45%;
+}
+
+input[type="submit"] {
+ -webkit-border-radius: 7;
+ -moz-border-radius: 7;
+ border-radius: 7px;
+ border: none;
+ color: #fff;
+ font-size: 100%;
+ width: 10%;
+ background: #000;
+ padding: 10px 10px 10px 10px;
+ margin-left: 20px;
+ text-decoration: none;
+}
+
+input[type="submit"]:hover {
+ background: #6b6b6b;
+ text-decoration: none;
 }
