--- a/www/css/gui.css
+++ b/www/css/gui.css
@@ -16,7 +16,7 @@ h1 {
  font-family: "Georgia", "Times New Roman", Times, serif;
  font-size: 500%;
  margin-bottom: 0px;
- margin-top: 40px;
+ margin-top: 90px;
 }
 
 h2 {
@@ -36,12 +36,12 @@ div#dicewrap {
 
 div#dice0 {
  float: left;
- width: 200px;
- height: 200px;
+ width: 150px;
+ height: 150px;
  margin-left: 50px;
  margin-right: 0px;
  background: url("../img/prettydice.png");
- background-size: 600px;
+ background-size: 450px;
  user-select: none;
 -webkit-user-select: none;
 -moz-user-select: none;
@@ -50,12 +50,12 @@ div#dice0 {
 
 div#dice1 {
  float: left;
- width: 200px;
- height: 200px;
+ width: 150px;
+ height: 150px;
  margin-left: 50px;
  margin-right: 30px;
  background: url("../img/prettydice.png");
- background-size: 600px;
+ background-size: 450px;
  user-select: none;
 -webkit-user-select: none;
 -moz-user-select: none;
@@ -68,33 +68,73 @@ div#total {
  font-size: large;
 }
 
-div#nextturn {
- margin-left: 50px;
- padding-left: 10px;
- background-color: #EEE;
+span#nextturn {
+ margin-top: 15px;
+ padding-left: 20px;
  color: black;
  font-size: 20px;
- width: 380px;
+ width: 360px;
+ height: 30px;
 }
 
-div#opennew {
- position: relative;
- margin-left: 80px;
+span#opennew {
+ float: left;
+ margin-top: 25px;
+ color: black;
+ font-size: 20px;
+ font-weight: bold;
+ width: 120px;
+ height: 15px;
+ 
+-webkit-border-radius: 7;
+-moz-border-radius: 7;
+ border-radius: 7px;
+ border: none;
+ padding: 5px 10px 10px 15px;
+ text-decoration: none;
+ }
+ 
+ span#opennew:hover {
+ float: left;
+ /*position: relative;*/
+ margin-top: 25px;
+ color: white;
+ background-color: black;
+ font-size: 20px;
+ font-weight: bold;
+ width: 120px;
+ height: 15px;
+ 
+-webkit-border-radius: 7;
+-moz-border-radius: 7;
+ border-radius: 7px;
+ border: none;
+ padding: 5px 10px 10px 15px;
+ text-decoration: none; 
+ }
+
+/*
+span#opennew {
+ /*margin-left: 80px;*
+ float: left;
+ /*margin-left: 20px;*
+ margin-top: 19px;
  color: black;
  font-size: 20px;
  font-weight: bold;
  width: 140px;
- margin-bottom: 30px;
+ height: 30px;
+ /*margin-bottom: 30px;*
  
 -webkit-border-radius: 7;
 -moz-border-radius: 7;
  border-radius: 7px;
  border: none;
  padding: 10px 10px 10px 20px;
- text-decoration: none; 
+ text-decoration: none;
  }
  
- div#opennew:hover {
+ span#opennew:hover {
  position: relative;
  margin-left: 80px;
  color: white;
@@ -109,7 +149,7 @@ div#opennew {
  border: none;
  padding: 10px 10px 10px 20px;
  text-decoration: none; 
- }
+ }*/
  
 #tail {
  border: 3px solid blue;
@@ -133,7 +173,7 @@ div#opennew {
 #rightcol {
   float: right;
   width: 42%;
-  margin-top: 5%;
+  margin-top: 8%;
   margin-right: 4%;
   border-radius: 25px;
   background: #ffffff;
@@ -168,6 +208,35 @@ div#opennew {
     border: 2px solid #000;
 	border-radius: 10px;
 	overflow: auto;
+    width: 60%; /* Could be more or less, depending on screen size */
+}
+
+/* The New Game window */
+.gameset {
+    display: none; /* Hidden by default */
+    background: none; /*url("../img/metalbg.png");*/
+	background-size: 100% 100%;
+	position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    color: black;
+}
+
+/* Modal Content/Box */
+.gameset-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 2px solid #000;
+	border-radius: 10px;
+	overflow: auto;
+	/*height: 400px;*/
     width: 60%; /* Could be more or less, depending on screen size */
 }
 
