--- a/www/css/gui.css
+++ b/www/css/gui.css
@@ -257,7 +257,7 @@ input[type="submit"] {
  border: none;
  color: #fff;
  font-size: 100%;
- width: 10%;
+ width: 100px;
  background: #000;
  padding: 10px 10px 10px 10px;
  margin-left: 20px;
